fix for filter layout on mobile

--- a/src/_sass/tools/innovator-database/menu.scss
+++ b/src/_sass/tools/innovator-database/menu.scss
@@ -52,12 +52,6 @@
     }
   }
 }
-.innovatorDatabase_filtersMenu {
-  [class*="col-"] {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-}
 
 // Set menu visibliity based on active tab class
 .activeTab_innovatorMap,
@@ -102,6 +96,10 @@
   @include transition();
   .row {
     margin: 0;
+    [class*="col-"] {
+      padding-left: 5px;
+      padding-right: 5px;
+    }
   }
   h4 {
     font-size: 14px;
@@ -192,7 +190,9 @@ body.condensed-header {
 }
 
 @media all and (max-width: $screen-sm-max) {
-
+  .icon-help {
+    display: none;
+  }
   .innovatorDatabase_menu {
     top: 120px;
     section {
@@ -202,6 +202,23 @@ body.condensed-header {
       }
     }
   }
+  .innovatorDatabase_filtersMenu {
+    h4 {
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+    .row {
+      margin: 0;
+      [class*="col-"] {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+    }
+    .locationSearch {
+      margin: 0 15px;
+    }
+  }
+
 }
 
 @media all and (max-width: $screen-xs-max) {
